fix coupon mountain spacing

--- a/share/spice/coupon_mountain/coupon_mountain.css
+++ b/share/spice/coupon_mountain/coupon_mountain.css
@@ -7,9 +7,6 @@
 }
 
 .tile--coupon_mountain .tile__media {
-    height: 5em;
-}
-
-.tile--coupon_mountain .tile__media__img {
-    margin-top: 0;
+	padding-top: 1em;
+	height: 5em;
 }
